ola-parser/src/testdata/syntaxTests/inheritance/fallback_receive/fallback_without_override.sol
contract C {
    fallback() external virtual {}
}

contract D is C {
    fallback() external {}
}
// ----
// TypeError 9456: (66-88): Overriding fn is missing "override" specifier.
